# gym-log

./: deploy.sh  post-deploy.sh  template.yaml
client/: .gitignore  deploy.sh  env.d.ts  icon.sh  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  vite.config.ts
client/src/: App.vue  main.ts
client/src/assets/: main.css
client/src/components/: Backdrop.vue  ExerciseEdit.vue  ExerciseSetEdit.vue  Header.vue  InputNumber.vue  ListGroup.vue  ListItem.vue  Main.vue  Menu.vue  ResolveChoose.vue  ResolveColor.vue  ResolveItem.vue  ResolveItemExercise.vue  ResolveItemMeasurement.vue  ResolveItemWorkout.vue  ResolveMeasurement.vue  SequenceNavigator.vue  SetEdit.vue  SetTable.vue  TextArea.vue
client/src/modals/: AdjustDatesModal.vue  AlertModal.vue  ConfirmModal.vue  MergeConflictModal.vue  Modal.vue  SelectModal.vue  TestModal.vue
client/src/model/: api.ts  db.ts  worker.ts
client/src/router/: auth-guard.ts  back.ts  date-guard.ts  index.ts  uuid-guard.ts
client/src/services/: auth.ts  cognito.ts  db.ts  sync.ts  user.ts  worker.ts
client/src/utils/: alert.ts  (+12 more)
client/www/: index.html
server/: Cargo.toml  deploy.sh
server/src/: common.rs  main.rs  model.rs  user.rs  user_measurement.rs  user_workout.rs  user_workout_exercise.rs  user_workout_order.rs
server/src/common/: db.rs  db_conv.rs  db_util.rs  mod.rs  model.rs  request.rs  response.rs  time.rs  timestamp.rs  version.rs
server/src/handlers/: mod.rs  user.rs  user_measurement.rs  user_snapshot.rs  user_workout.rs  user_workout_exercise.rs  user_workout_order.rs
(+10 files in other folders)
