[package]
name = "gym-log"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.52"
aws-sdk-dynamodb = "0.22"
lambda_http = { version = "0.7", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.7"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
base64 = "0.21"
serde = "1"
serde_json = "1"
chrono = { version = "0.4", default-features = false }
once_cell = "1"
tokio-stream = "0.1"
